fixed z-index problem

--- a/css/themes/basic-grey.css
+++ b/css/themes/basic-grey.css
@@ -21,7 +21,7 @@
 /* AUTOCOMPLETE */
 #ui-theme-basic-grey
 {
-    z-index: 1000 !important;
+    z-index: 800 !important;
 }
 .ui-theme-basic-grey.ui-autocomplete {
   position: absolute;
